k8s/admin-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-server-app
  namespace: instamitra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-server-app
  template:
    metadata:
      labels:
        app: admin-server-app
    spec:
      containers:
        - name: admin-server-app
          image: instamitra-ci-admin-server-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: admin-server-app
  namespace: instamitra
spec:
  type: ClusterIP
  selector:
    app: admin-server-app
  ports:
    - port: 8080
      targetPort: 8080
