k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
  namespace: instamitra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      containers:
        - name: orders-service
          image: 087725326648.dkr.ecr.ap-south-1.amazonaws.com/instamitra-ci-orders-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: instamitra
spec:
  type: ClusterIP
  selector:
    app: orders-service
  ports:
    - port: 8080
      targetPort: 8080
