k8s/provider-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provider-service
  namespace: instamitra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: provider-service
  template:
    metadata:
      labels:
        app: provider-service
    spec:
      containers:
        - name: provider-service
          image: instamitra-ci-provider-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: provider-service
  namespace: instamitra
spec:
  type: ClusterIP
  selector:
    app: provider-service
  ports:
    - port: 8080
      targetPort: 8080
