k8s/service-catalog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-catalog-service
  namespace: instamitra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-catalog-service
  template:
    metadata:
      labels:
        app: service-catalog-service
    spec:
      containers:
        - name: service-catalog-service
          image: instamitra-ci-service-catalog-service:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-catalog-service
  namespace: instamitra
spec:
  type: ClusterIP
  selector:
    app: service-catalog-service
  ports:
    - port: 8080
      targetPort: 8080
