k8s/service-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-registry
  namespace: instamitra
spec:
  replicas: 2   # Use at least 2 for HA
  selector:
    matchLabels:
      app: service-registry
  template:
    metadata:
      labels:
        app: service-registry
    spec:
      containers:
        - name: service-registry
          image: 087725326648.dkr.ecr.ap-south-1.amazonaws.com/instamitra/service-registry:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 15
            periodSeconds: 10
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: service-registry
  namespace: instamitra
spec:
  type: ClusterIP
  selector:
    app: service-registry
  ports:
    - port: 8761
      targetPort: 8761
