k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: instamitra-ingress
  namespace: instamitra
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ec2-43-204-35-28.ap-south-1.compute.amazonaws.com
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - path: /provider
            pathType: Prefix
            backend:
              service:
                name: provider-service
                port:
                  number: 8080
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: orders-service
                port:
                  number: 8080
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8080
          - path: /service-catalog
            pathType: Prefix
            backend:
              service:
                name: service-catalog-service
                port:
                  number: 8080
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 8080
          - path: /admin-server
            pathType: Prefix
            backend:
              service:
                name: admin-server-app
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /registry
            pathType: Prefix
            backend:
              service:
                name: service-registry
                port:
                  number: 8761
